# humanoid_mpc_cost_matchingFork

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
.workbuddy/memory/: 2026-07-15.md
docker/: Dockerfile
humanoid_cost_matching/: package.xml  setup.cfg  setup.py
humanoid_cost_matching/humanoid_cost_matching/data/: observation_logger.py  offline_dataset.py
humanoid_cost_matching/humanoid_cost_matching/train/: train_cost_matching.py
humanoid_cost_matching/humanoid_cost_matching/utils/: export_theta_info.py
humanoid_cost_matching/logs/deployed_theta/: learned_theta.info
humanoid_cost_matching/scripts/: log_observation
humanoid_cost_matching_cpp/: CMakeLists.txt  package.xml
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/: OfflineQEvaluator.h
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/core/: RefPack.h  ThetaLayout.h  ZohController.h
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/cost/: CostBundle.h  ICostTerm.h
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/cost/helpers/: PieceWisePolynomialBarrierPenaltyAD.h  RelaxedBarrierPenaltyAD.h
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/cost/tapes/: cost_base_tapes.h  cost_com_tapes.h  cost_swing_tapes.h  cost_torque_tapes.h  cost_tracking_tapes.h  penalty_collision_tapes.h  penalty_cop_tapes.h  penalty_joint_tapes.h  penalty_normal_velocity_tapes.h  penalty_zero_velocity_tapes.h
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/cost/terms/: cost_base_terms.h  cost_com_terms.h  cost_swing_terms.h  cost_torque_terms.h  cost_tracking_terms.h  penalty_collision_terms.h  penalty_cop_terms.h  penalty_joint_terms.h  penalty_normal_velocity_terms.h  penalty_zero_velocity_terms.h
humanoid_cost_matching_cpp/include/humanoid_cost_matching_cpp/offline/rollout/: FixedGridEulerRollout.h  FixedGridRK4Rollout.h
humanoid_cost_matching_cpp/src/bindings/: pybind_offline_q_batch.cpp
humanoid_cost_matching_cpp/src/offline/: OfflineQEvaluator.cpp
humanoid_cost_matching_cpp/src/offline/core/: ZohController.cpp
humanoid_cost_matching_cpp/src/offline/cost/tapes/: cost_base_tapes.cpp  cost_com_tapes.cpp  cost_swing_tapes.cpp  cost_torque_tapes.cpp  cost_tracking_tapes.cpp  penalty_collision_tapes.cpp  penalty_cop_tapes.cpp  penalty_joint_tapes.cpp  penalty_normal_velocity_tapes.cpp  penalty_zero_velocity_tapes.cpp
humanoid_cost_matching_cpp/src/offline/rollout/: FixedGridEulerRollout.cpp  FixedGridRK4Rollout.cpp
humanoid_cost_matching_cpp/src/tools/: offline_q_eval_main.cpp
humanoid_nmpc/humanoid_centroidal_mpc/include/humanoid_centroidal_mpc/: CentroidalMpcInterface.h
humanoid_nmpc/humanoid_centroidal_mpc/include/humanoid_centroidal_mpc/dynamics/: CentroidalDynamicsAD.h
humanoid_nmpc/humanoid_centroidal_mpc/src/cost/: CentroidalMpcEndEffectorFootCost.cpp  ICPCost.cpp
humanoid_nmpc/humanoid_centroidal_mpc/src/dynamics/: CentroidalDynamicsAD.cpp
humanoid_nmpc/humanoid_centroidal_mpc_ros2/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_centroidal_mpc_ros2/src/: CentroidalMpcSqpNode.cpp
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/common/: ModelSettings.h
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/reference_manager/: SwitchedModelReferenceManager.h
humanoid_nmpc/humanoid_common_mpc/src/: HumanoidCostConstraintFactory.cpp
humanoid_nmpc/humanoid_common_mpc/src/common/: ModelSettings.cpp
humanoid_nmpc/humanoid_common_mpc/src/cost/: EndEffectorKinematicsQuadraticCost.cpp  ExternalTorqueQuadraticCostAD.cpp
robot_models/unitree_g1/g1_centroidal_mpc/config/mpc/: task.info  task_cost_matching.info
robot_models/unitree_g1/g1_centroidal_mpc/launch/: dummy_sim_cm.launch.py
robot_models/unitree_g1/g1_description/urdf/: g1_29dof.urdf
