<?xml version="1.0"?>
<package format="3">
  <name>humanoid_cost_matching</name>
  <version>0.0.1</version>
  <description>Cost-matching utilities for wb_humanoid_mpc.</description>

  <maintainer email="wenqicai.97@gmail.com">Wenqi Cai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>ocs2_ros2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
